Funcionalidad para generar informes PDF y Excel y algunos retoques en la interfaz con el logo
.

Funcionalidad para generar informes PDF y Excel y algunos retoques en la interfaz con el logo

Funcionalidad para generar informes PDF y Excel y algunos retoques en la interfaz con el logo

Eliminar contenido del log